cleanup and lockset (and experimental pub-aquire)